
bin_PROGRAMS=DNSManager_test Parse_test Url_test

AM_CPPFLAGS = -I$(top_builddir)/src

DNSManager_test_LDADD = $(top_builddir)/src/libzhihuCrawler.a

Parse_test_LDADD = $(top_builddir)/src/libzhihuCrawler.a

Url_test_LDADD = $(top_builddir)/src/libzhihuCrawler.a

DNSManager_test_SOURCES = DNSManager_test.cc 

Parse_test_SOURCES=Parse_test.cc

Url_test_SOURCES = Url_test.cc

